working getAllMovies, getOneMovie, getAllGenres, GetOneGenre - all with views

--- a/views/movies/showOne.ejs
+++ b/views/movies/showOne.ejs
@@ -1,8 +1,12 @@
 <% include ../partials/boilerplate %>
 
-<h1>Get One Movie</h1>
+<h1>All info for One Movie</h1>
 
 <h2><%= movie.title %></h2>
+<h3><%= movie.director%></h3>
+<h3><%= movie.release_year%></h3>
+
+<!-- need to deal with showing all genres here -->
 
 
 <% include ../partials/end %>
