--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/boilerplate %>
 
-<h1>MovieApp</h1>
+<h1>MovieApp - show all movies</h1>
 
 <p><% movies.forEach((movie) => { %>
   <a href="movies/<%= movie.id%>">
