updated form and getGenre

--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -3,7 +3,7 @@
 <h1>MovieApp - show all movies</h1>
 
 <p><% movies.forEach((movie) => { %>
-  <a href="movies/<%= movie.id%>">
+  <a href="movies/movie/<%= movie.id%>">
     <h3><%= movie.title %></h3></a>
   <% }) %>
 </p>
