--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,14 @@
+
+/*
+body {
+  background-image: url(/images/dog_screen.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}*/
+
 .movie-container {
+  max-width: 1000px;
+  margin: 40px auto 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -8,9 +18,16 @@
 
 .movie-poster {
   width: 200px;
-  margin: auto;
+  margin: 0 auto 15px;
+  padding: 5px;
+  border: 2px solid grey;
+  flex: 1;
 }
 
 .movie-title {
   text-align: center;
+}
+
+.form {
+  display: flex;
 }
