--- a/views/movies/new.ejs
+++ b/views/movies/new.ejs
@@ -7,10 +7,14 @@
 
   <div class="form">
    <form action="/movies" method="POST">  <!-- name has to match column in table -->
-     <input type="text" name="title" placeholder="Movie Title"> <br>
-     <input type="text" name="director" placeholder="Director"> <br>
-     <input type="text" name="release_year" placeholder="Year Released"> <br>
-     <textarea type="textarea" name="description" rows="8" placeholder="Brief Description"></textarea> <br>
+     <input type="text" name="title" placeholder="Movie Title">
+     <br>
+     <input type="text" name="director" placeholder="Director">
+     <br>
+     <input type="text" name="release_year" placeholder="Year Released">
+     <br>
+     <textarea type="textarea" name="description" rows="8" placeholder="Brief Description"></textarea>
+     <br>
      <select name="genre_id">
       <% genres.forEach((genre) => { %>
         <option value="<%= genre.id %>"><%= genre.genre_type %></option>
