--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -1,14 +1,18 @@
 <% include ../partials/boilerplate %>
 
 <h1>MovieApp - show all movies</h1>
-
+<a href="movies/new">
+<button>Add New Movie</button> </a>
 
 <div class="movie-container">
 <% movies.forEach((movie) => { %>
   <a href="movies/movie/<%= movie.id%>">
     <h3 class="movie-info">Released: <%= movie.release_year%> Directed By: <%=movie.director%></h3>
-    <img src="<%= movie.img_url %>" class="movie-poster"></a>
+    <img src="<%= movie.img_url %>" class="movie-poster">
+  </a>
+  <a href="movies/movie/<%= movie.id%>/update"><button>Edit Movie</button></a>
   <% }) %>
+
 </div>
 
 
