adds new table for readMe

--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,41 @@
-
-/*
 body {
-  background-image: url(/images/dog_screen.jpg);
-  background-size: 100%;
-  background-repeat: no-repeat;
-}*/
+  font-family: arial;
+  background-color: #9494a5;
+}
+
+.header-container {
+  display: flex
+  justify-content: center;
+}
+
+a:link {
+  text-decoration: none;
+  color: black;
+}
+
+a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: pink;
+}
+.nav-container {
+  display: flex;
+  list-style-type: none;
+}
+
+
+@media screen and (max-width : 600px) {
+  .header-container {
+    flex-direction: column;
+  }
+  .nav-container {
+    align-self: center;
+  }
+
+}
 
 .movie-container {
   max-width: 1000px;
@@ -28,6 +59,3 @@ body {
   text-align: center;
 }
 
-.form {
-  display: flex;
-}
