--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,9 @@
 <% include ./partials/boilerplate %>
 
+<% include ./partials/nav %>
+
 <!-- <div class="bg-image"></div> -->
 
-<h1>Welcome to MovieApp!</h1>
 <h2>Please click on a link below. </h2>
 
 <div>
