--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -7,3 +7,4 @@
     <link rel="stylesheet" href="/style.css" type="text/css" media="all" />
   </head>
   <body>
+    <header class="header-container">
