--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,12 +1,18 @@
-<h1>MovieApp!</h1>
 
-<nav>
-  <ul class="nav-container">
-    <li><a href="/">Home</a></li>
-    <li><a href="/movies">Movies</a></li>
-    <li><a href="/genre">Genres</a></li>
-    <li><a href="/movies/new">Add Movie</a></li>
-</ul>
-</nav>
+<div class="nav-background">
+  <div class="nav-container">
+    <header class="nav-header">
+      <h1><a href="#">MovieApp</a></h1>
+      <div class="nav-menu-button">Home</div>
+    </header>
+    <nav>
+      <ul class="nav-ul hide-ul">
+        <li><a class="nav-link" href="/">Home</a></li>
+        <li><a class="nav-link" href="/movies">Movies</a></li>
+        <li><a class="nav-link" href="/genre">Genres</a></li>
+        <li><a class="nav-link" href="/movies/new">Add Movie</a></li>
+      </ul>
+    </nav>
+  </div>
+</div>
 
-</header>
