--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,8 @@
 <h2>Please click on a link below. </h2>
 
 <div>
-<a href="http://localhost:3000/movies">Movies</a>
-<a href="http://localhost:3000/genre">Genres</a>
+<a href="/movies">Movies</a>
+<a href="/genre">Genres</a>
 </div>
 
 <% include ./partials/end %>
