--- a/public/style.css
+++ b/public/style.css
@@ -1,42 +1,116 @@
+body, p, h1, h2, h3, h4, ul, li {
+  margin: 0;
+  padding: 0;
+}
 body {
-  font-family: arial;
-  background-color: #9494a5;
+  font-family: Arial, Helvetica, sans-serif;
+  max-height: 100vh;
+  background-color: lavender;
 }
 
-.header-container {
-  display: flex
-  justify-content: center;
-}
-
-a:link {
-  text-decoration: none;
-  color: black;
-}
-
-a:visited {
-  text-decoration: none;
-  color: black;
-}
-
-a:hover {
-  color: pink;
-}
-.nav-container {
-  display: flex;
+.nav-container > nav > ul {
   list-style-type: none;
 }
+.nav-background {
+  position: relative;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid #ddd;
+}
 
+.nav-container {
+  display: flex;
+  max-width: 1000px;
+  margin: 0 auto;
+  justify-content: space-between;
+}
 
-@media screen and (max-width : 600px) {
-  .header-container {
-    flex-direction: column;
-  }
-  .nav-container {
-    align-self: center;
-  }
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-logo {
+  margin-left: 15px;
+  color: #444;
+  text-decoration: none;
+}
+.nav-logo:hover {
+  color: #666;
+}
+
+.nav-ul {
+  display: flex;
+  max-width: 1000px;
+  padding: 20px;
+}
+
+.nav-ul > li {
+  display: flex;
+}
+
+.nav-link {
+  flex: 1;
+  color: #444;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: 200ms;
+  margin: 0 10px ;
 
 }
 
+.nav-link:hover {
+  background-color: #f1f1f1;
+}
+
+.nav-menu-button {
+    padding: 1rem;
+    background-color: #f1f1f1;
+    display: none;
+  }
+
+.active-link {
+  background-color: #f1f1f1;
+}
+
+/*MOBILE*/
+@media screen and (max-width: 700px) {
+  main {
+    margin: 0 auto;
+    text-align: center;
+  }
+  .nav-container {
+    display: flex;
+  }
+
+  .nav-ul {
+    flex-direction: column;
+  }
+
+  .nav-link {
+    margin: 5px
+  }
+  .genre-list {
+    text-align: center;
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+h2 {
+  font-weight: 400;
+  padding: 5px;
+}
+
+.genre-list {
+  margin: 20px;
+
+}
 .movie-container {
   max-width: 1000px;
   margin: 40px auto 0;
@@ -44,7 +118,6 @@ a:hover {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-
 }
 
 .movie-poster {
@@ -58,4 +131,15 @@ a:hover {
 .movie-title {
   text-align: center;
 }
+.add-movie-button {
+  margin-top: 20px;
+  border: 2px solid black;
+  background-color: #e7e7e7l
+  color: black;
+  font-size: 24px;
+}
 
+.single-movie-info {
+  align-content: center;
+  margin-bottom: 25px;
+}
