--- a/views/genres/showOne.ejs
+++ b/views/genres/showOne.ejs
@@ -1,12 +1,13 @@
 <% include ../partials/boilerplate %>
+<% include ../partials/nav %>
 
 <h1>All movies in one Genre</h1>
 
 <h2><%= genre[0].type %></h2>
 
 <p><% genre.forEach((movie) => { %>
-  <a href="http://localhost:3000/movies/<%= movie.id%>"> <!-- WARNING:this is hardcoded to localhost:3000 -->
-    <h3><%= movie.title %></h3></a>
+  <a href="movies/<%= movie.id%>"> <!-- WARNING:this is hardcoded to localhost:3000 -->
+    <h3 class="genre-list"><%= movie.title %></h3></a>
   <% }) %>
 </p>
 
