--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,8 @@
 <h2>Please click on a link below. </h2>
 
 <div>
-<a href="/movies">Movies</a>
-<a href="/genre">Genres</a>
+<h2><a href="/movies">Movies</a> | <a href="/genre">Genres</a></h2>
+
 </div>
 
 <% include ./partials/end %>
