--- a/views/movies/showOne.ejs
+++ b/views/movies/showOne.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/boilerplate %>
+<% include ../partials/nav %>
 
 <h1>All info for One Movie</h1>
 <img src="<%= movie.img_url %>" class="movie-poster">
