--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MovieApp</title>
     <link rel="stylesheet" href="/style.css" type="text/css" media="all" />
   </head>
