--- a/public/style.css
+++ b/public/style.css
@@ -107,6 +107,10 @@ h2 {
   padding: 5px;
 }
 
+h3 {
+  font-weight: 300;
+}
+
 .genre-list {
   margin: 20px;
 
@@ -117,7 +121,8 @@ h2 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  text-align: center;
 }
 
 .movie-poster {
