--- a/views/movies/showOne.ejs
+++ b/views/movies/showOne.ejs
@@ -6,7 +6,7 @@
 <h2><%= movie.title %></h2>
 <h3>Directed By: <%= movie.director%></h3>
 <h3>Released: <%= movie.release_year%></h3>
-<p><%= movie.desciption %></p>
+<p class="movie-description"><%= movie.description %></p>
 
 
 
