--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,12 +2,12 @@
 <div class="nav-background">
   <div class="nav-container">
     <header class="nav-header">
-      <h1><a href="./" class="nav-logo">MovieApp</a></h1>
+      <h1><a href="../" class="nav-logo">MovieApp</a></h1>
       <div class="nav-menu-button">MENU</div>
     </header>
     <nav class="nav-link-container">
       <ul class="nav-ul hide-ul">
-        <li><a class="nav-link" href="./">Home</a></li>
+        <li><a class="nav-link" href="../">Home</a></li>
         <li><a class="nav-link" href="/movies">Movies</a></li>
         <li><a class="nav-link" href="/genre">Genres</a></li>
         <li><a class="nav-link" href="/movies/new">Add Movie</a></li>
